--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
     <head>
         <!--=============== basic  ===============-->
         <meta charset="UTF-8">
-        <title>Inshot - Creative Responsive Photography  Portfolio</title>
+        <title>Trendies - Trending Crypto and Utility for Degens</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <meta name="robots" content="index, follow"/>
-        <meta name="keywords" content=""/>
-        <meta name="description" content=""/>
+        <meta name="title" content="Trendies - Trending Crypto and Utility for Degens">
+        <meta name="description" content="You like making money, kid? C'mere.">
+        <meta name="keywords" content="money, making it, crypto">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="English">
+
+
+        <meta property="og:title" content="Trendies - Trending Crypto and Utility for Degens">
+        <meta property="og:site_name" content="Trendies">
+        <meta property="og:url" content="trendies.lol">
+        <meta property="og:description" content="You like making money, kid? C'mere.">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://trendies.lol/images/folio/1.jpg">
+
         <!--=============== css  ===============-->
         <link type="text/css" rel="stylesheet" href="css/reset.css">
         <link type="text/css" rel="stylesheet" href="css/plugins.css">
